# oxidy

./: .gitignore  BACKLOG.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  main_test.rs  server.rs  structs.rs
src/libs/: cpus.rs  default_context.rs  fork.rs  found_callback.rs  handler.rs  http_status_string.rs  listen.rs  mod.rs  parse.rs  threadpool.rs
src/macros/: middleware.rs  mod.rs  route.rs  tail.rs
src/structs/: context.rs  definition.rs  mod.rs  request.rs  response.rs
src/utils/: del_vec.rs  find_callback.rs  get_header.rs  get_vec.rs  handler.rs  mod.rs  parse_http_version.rs  parse_method.rs  parse_path.rs  response_payload.rs  response_payload_empty.rs  set_vec.rs  status_string.rs
