[package]
name = "oxidy"
version = "0.3.1"
edition = "2021"
authors = ["KrishnaTorque"]
license = "GPL-2.0"
description = "Super Fast & High Performance minimalist web framework for rust"
repository = "https://github.com/oxidy-rs/oxidy"
documentation = "https://docs.rs/oxidy/latest/oxidy"
keywords = ["web", "framework"]
categories= ["web-programming", "network-programming"]
readme = "README.md"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
incremental = false

[dependencies]
num_cpus = "1.13.1"
threadpool = "1.8.1"
