[package]
name = "oxidy"
version = "0.5.0"
edition = "2021"
authors = ["KrishnaTorque"]
license = "MIT"
readme = "README.md"
description = "Fast & Minimum Web Framework for Rust"
repository = "https://github.com/oxidy-rs/oxidy"
documentation = "https://docs.rs/oxidy"
keywords = ["web", "framework", "http", "server"]
categories = ["web-programming", "network-programming", "web-programming::http-server", "http", "server"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = false

[dependencies]
futures = "0.3"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
